# Proyecto1_Ros2

./: README.txt
Parte 1/: README_1.txt
Parte 2/: README_2.txt  triciclo.xacro
Parte 3/: README_3.txt  launchrviz.sh
Parte 3/install/: local_setup.sh  setup.sh
Parte 3/install/triciclo_py/lib/triciclo_py/: mover_robot
Parte 3/install/triciclo_py/share/triciclo_py/: package.ps1  package.sh  package.zsh
Parte 3/install/triciclo_py/share/triciclo_py/config/: controllers.yaml
Parte 3/install/triciclo_py/share/triciclo_py/urdf/: triciclo.urdf
Parte 3/log/: latest_build
Parte 3/src/triciclo_py/: package.xml  setup.py
Parte 3/src/triciclo_py/launch/: display.launch.py
Parte 4/: README_4.txt
Parte 4/install/: local_setup.sh  setup.bash
Parte 4/install/triciclo_py/lib/triciclo_py/: demo_movimiento  mover_robot_cmdvel_rosgz  triciclo_teleop
Parte 4/install/triciclo_py/share/triciclo_py/: package.sh
Parte 4/install/triciclo_py/share/triciclo_py/config/: triciclo_controller.yaml  triciclo_controllers.yaml
Parte 4/install/triciclo_py/share/triciclo_py/launch/: display.launch.py  sim.launch.py
Parte 4/install/triciclo_py/share/triciclo_py/urdf/: triciclo.urdf
Parte 4/log/: latest_build
Parte 4/src/triciclo_py/: setup.py
Parte 4/src/triciclo_py/launch/: gazebo.launch.py
Parte 4/src/triciclo_py/triciclo_py/: demo_movimiento.py
Parte 4/src/triciclo_py/urdf/: triciclo.urdf
Parte 5/: README_5.txt  ground_plane.sdf
Parte 5/install/: setup.ps1  setup.sh  setup.zsh
Parte 5/install/triciclo_py/lib/triciclo_py/: mover_robot_cmdvel
Parte 5/install/triciclo_py/share/triciclo_py/: package.bash  package.dsv
Parte 5/log/: latest_build  latest_list
Parte 5/src/triciclo_py/: package.xml  setup.cfg
(+1 files in other folders)
