<?xml version="1.0"?>
<package format="3">
  <name>triciclo_py</name>
  <version>0.0.0</version>
  <description>Simulación robot tipo triciclo</description>
  <maintainer email="manuel.inostroza1801@alumnos.ubiobio.cl">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

