<?xml version="1.0"?>
<package format="3">
  <name>triciclo_py</name>
  <version>0.0.0</version>
  <description>Simulación robot tipo triciclo</description>
  <maintainer email="manuel.inostroza1801@alumnos.ubiobio.cl">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
